# vehicle-soa-designer

./: LICENSE  README.md  check-tauri-setup.bat  generate-icons.bat  package-lock.json  package.json  vite.config.js
src/: App.jsx  VehicleArchitectureDesigner.jsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.txt
src/components/: LeftSidebar.jsx  ProjectSidebar.jsx  PropertiesPanel.jsx  SimulationPanel.jsx  TopNavbar.jsx  ValidationPanel.jsx
src/nodes/: ActuatorNode.jsx  DomainControllerNode.jsx  ECUNode.jsx  GatewayNode.jsx  SensorNode.jsx  ServiceNode.jsx  SwitchNode.jsx
src/utils/: vehicleArchitectureUtils.js
