[package]
name = "vehicle-architecture-designer"
version = "1.0.0"
description = "Vehicle Architecture Designer - A comprehensive tool for designing automotive E/E architectures"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
